fix a lot , data sort and so on

--- a/web/web.conf
+++ b/web/web.conf
@@ -1,5 +1,5 @@
-SECRET_KEY = 'YouNeverKnow'
+SECRET_KEY = 'YouNev3rKn0w'
 USERNAME   = 'user'
 PASSWORD   = '\x88@[\xba\x0c\x92GD\xf1\x16\x01\x1c7\xd0\xb96c\xda\xb08S\xbf\xda\x97\x05\xe9\xd8q\x9e\xd0\xc3\xd7'
 SALT       = 'Iknownothing'
-#WARING! Don't change it.the password isn't the password you input it,it be encrypted
+#WARING! Don't change it.the password isn't the password you input,it be encrypted
